--- a/classes.html
+++ b/classes.html
@@ -48,8 +48,7 @@
            
         <div class="full_bg_news">
             <h3 class="text-center">What we offer</h3>
-            <p class="text-justified text-center">All members of our society can attend <strong>free</strong> weekly classes (1h) taught by native-french speakers. You will find below a table summarizing the different levels available.</p>
-		<p class="text-justified text-center"> We offer 4 different levels: </p>
+            <p class="text-justified text-center">All members of our society can attend <strong>free</strong> weekly classes (1h) taught by native-french speakers. You will find below a table summarizing the different levels available. We offer 4 different levels: </p>
 		<p class="text-justified text-center"> <strong> Beginners</strong>: for people who have never studied French, or very little. </p>
 		<p class="text-justified text-center"> <strong>Elementary</strong>: for people with a strong A1 or A2 level. For you if you can: understand sentences without context, communicate basic ideas, conjugate a few verbs in the present. </p>
 		<p class="text-justified text-center"> <strong>Intermediate</strong>: for people with a B1 or decent B2 level. For you if you can: read and understand short texts, have decent conversations with people, conjugate verbs in the future and in the past, and write texts without too many mistakes. </p>
