--- a/classes.html
+++ b/classes.html
@@ -54,7 +54,7 @@
 		<p class="text-justified text-center"> <strong>Intermediate</strong>: for people with a B1 or decent B2 level. For you if you can: read and understand short texts, have decent conversations with people, conjugate verbs in the future and in the past, and write texts without too many mistakes. </p>
 		<p class="text-justified text-center"> <strong>Advanced</strong>: for people with a B2 or higher. For you if you can: read a book in French, have a conversation with someone on any given topic, use all verb tenses, write with little mistakes, and vary the structures you use. </p>
 
-		<p class="text-justified text-center"> Keep in mind you can change levels whenever you feel like it!</p>
+		<p class="text-justified text-center"> Keep in mind you can change levels whenever you feel like it! Please note that the 1 and 2 following the level class doesn't mean that there is a "strong" or "weak" group, simply that we have two classes.</p>
             <table cellpadding="15" align="center" class="table">
                 <tbody style="text-align: center;" class="tbody">
                     <tr>
