--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 											<div class="small-border"></div>
 										</div>
 										<div class="section-widget-content">
-											<p>Members have the opportunity to attend talks throughout the year, as we invite speakers to discuss burning topics in the Francophone world and to share insightful thoughts on France’s international presence.</p>
+											<p>Members have the opportunity to attend both online and in person talks throughout the year, as we invite speakers to discuss burning topics in the Francophone world and to share insightful thoughts.</p>
 										</div>
 									</div>
 								</div>
@@ -118,7 +118,7 @@
 											<div class="small-border"></div>
 										</div>
 										<div class="section-widget-content">
-											<p>We’re passionate about France and about UCL - and also about sharing all that fun! We organise joint events with other UCL, KCL, LSE, Imperial societies such as Football Tournaments, formal balls and much more!</p>
+											<p>We’re passionate about France and about UCL - and also about sharing all that fun! We organise joint events with other UCL, KCL, LSE, Imperial societies such as talks, socials, and much more!</p>
 										</div>
 									</div>
 								</div>
@@ -134,7 +134,7 @@
 				<div class="row align-items-center overlay">
 					<div class="text-center white_txt">
 						<h1 class="Titles">Classes</h1>
-						<p>We also offer French language classes for any student from beginner level to advanced! Instead of strict educational learning methods, we believe that socializing with francophone people is the best way to progress in French. More than just teachers, the educational team is composed of students who want to share their knowledge in the French language and in the francophone culture in a very friendly approach.</p>
+						<p>We also offer French language classes for any student from beginner level to advanced! Instead of strict educational learning methods, we believe that socializing with French speakers is the best way to make progress. More than just teachers, the educational team is composed of students who want to share their knowledge of French and the francophone culture in a very friendly approach.</p>
 						<button class="btn btn-outline-light" onclick="window.open('classes.html', '_blank')">Sign up for classes</button>
 					</div>
 				</div>
