--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								</div>
 							</div>
 						</tr>
-						<button class="white_txt btn btn-outline-light" onclick="window.open('events.html', '_blank')">Our Events</button>
+						<button class="white_txt btn btn-outline-light" onclick="window.open('https://www.facebook.com/pg/uclfrancophonesociety/events/?ref=page_internal', '_blank')">Our Events</button>
 					</div>
 					
 				</div>
